fix: unused logic
